fix(HeroBanner): Fix presentation text font-size on smaller devices

--- a/client/styles/_home.scss
+++ b/client/styles/_home.scss
@@ -349,13 +349,19 @@ main.home {
     section.home__hero .home__banner {
       margin-bottom: -20%;
 
-      .home__banner__left .home__banner__logo div {
-        h1 {
-          font-size: 8.85vw;
+      .home__banner__left {
+        .home__banner__logo div {
+          h1 {
+            font-size: 8.85vw;
+          }
+
+          p {
+            font-size: 2.13vw;
+          }
         }
 
-        p {
-          font-size: 2.13vw;
+        > p {
+          font-size: 1.25rem;
         }
       }
 
@@ -491,6 +497,10 @@ main.home {
               font-size: 5vw;
               letter-spacing: 1.2vw;
             }
+          }
+
+          > p {
+            font-size: 1rem;
           }
         }
       }
